# arguzz

./: .flake8  .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  pip-requirements.txt  pyproject.toml
libs/circil/: Makefile  README.md  dev-requirements.txt  pyproject.toml
libs/circil/circil/: utils.py
libs/circil/circil/fuzzer/: base.py  config.py  simple.py
libs/circil/circil/ir/: node.py  operator.py  serialize.py  type.py  visitor.py
libs/circil/circil/rewrite/: parser.py  rewriter.py  rule.py  tokenizer.py  utils.py
libs/circil/res/: equivalent.json  weakening.json
libs/circil/tests/: __init__.py  test_fuzzer.py  test_ir.py  test_rewrite.py  test_serialize.py
libs/zkvm-fuzzer-utils/: .gitignore  README.md  pyproject.toml  requirements.txt
libs/zkvm-fuzzer-utils/tests/: test_circil_transformer.py  test_file_utility.py  test_hms.py  test_record.py  test_rust_comment.py  test_rust_parse_panic.py
libs/zkvm-fuzzer-utils/zkvm_fuzzer_utils/: checker.py  circil.py  cli.py  cmd.py  common.py  csvlogger.py  default.py  file.py  fuzzer.py  git.py  injection.py  kinds.py  project.py  record.py  reprokit.py  risc32_im.py  trace.py
libs/zkvm-fuzzer-utils/zkvm_fuzzer_utils/rust/: cargo.py  common.py  ir2rust.py  panics.py
projects/jolt-fuzzer/: Dockerfile  README.md  pyproject.toml
projects/jolt-fuzzer/jolt_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/jolt-fuzzer/jolt_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/jolt-fuzzer/jolt_fuzzer/zkvm_repository/injection_sources/: __init__.py  cpu_rs_0369981.py  cpu_rs_0582b2a.py  cpu_rs_1687134.py  cpu_rs_20ac6eb.py  cpu_rs_42de0ca.py  cpu_rs_55b9830.py  cpu_rs_57ea518.py  cpu_rs_70c7733.py  cpu_rs_85bf51d.py  cpu_rs_d59219a.py  cpu_rs_e9caa23.py
projects/jolt-fuzzer/scripts/: defaults.sh  interactive.sh  refind.sh
projects/jolt-fuzzer/tests/: test_jolt_project_setup.py
projects/nexus-fuzzer/: Dockerfile  README.md  pyproject.toml  requirements.txt
projects/nexus-fuzzer/nexus_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/nexus-fuzzer/nexus_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/nexus-fuzzer/scripts/: defaults.sh
projects/nexus-fuzzer/tests/: test_nexus_ignored_errors.py  test_nexus_setup.py  test_nexus_trace.py
projects/openvm-fuzzer/: Dockerfile  README.md  pyproject.toml
projects/openvm-fuzzer/openvm_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/openvm-fuzzer/openvm_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/openvm-fuzzer/scripts/: defaults.sh  explore.sh
projects/openvm-fuzzer/tests/: test_openvm_project_setup.py
projects/pico-fuzzer/: Dockerfile  README.md  pyproject.toml
projects/pico-fuzzer/pico_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/pico-fuzzer/pico_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/pico-fuzzer/scripts/: defaults.sh
projects/pico-fuzzer/tests/: test_pico_project_setup.py
projects/risc0-fuzzer/: Dockerfile  README.md  pyproject.toml
projects/risc0-fuzzer/risc0_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/risc0-fuzzer/risc0_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/risc0-fuzzer/scripts/: check.sh  defaults.sh  install.sh  refind.sh
projects/risc0-fuzzer/tests/: test_risc0_setup.py  test_risc0_trace.py
projects/sp1-fuzzer/: Dockerfile  README.md  pyproject.toml
projects/sp1-fuzzer/scripts/: defaults.sh
projects/sp1-fuzzer/sp1_fuzzer/: cli.py  fuzzer.py  kinds.py  settings.py  zkvm_project.py
projects/sp1-fuzzer/sp1_fuzzer/zkvm_repository/: fuzzer_utils_crate.py  injection.py  install.py
projects/sp1-fuzzer/tests/: test_sp1_setup.py
scripts/: extract_csv.py  filter_findings.py  (+11 more)
(+35 files in other folders)
