
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "circil"
version = "0.1.2"
description="A library to generate circuit programs"
requires-python = ">= 3.10"
authors = []
readme = "README.md"

[tool.setuptools.packages.find]
include = ["circil*"]
exclude = ["res*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[tool.isort]
profile = "black"