
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zkvm-fuzzer-utils"
version = "0.0.1"
description="A shared util library for zkvm fuzzers"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "circil",
  "psutil>=7.0.0",
  "tabulate>=0.9.0"
]

[tool.setuptools.packages.find]
include = ["zkvm_fuzzer_utils*"]
exclude = ["tests*"]
