
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openvm-fuzzer"
version = "0.0.1"
description="Fuzzer for the OpenVM zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "circil",
  "zkvm-fuzzer-utils"
]

[project.scripts]
openvm-fuzzer = "openvm_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["openvm_fuzzer*"]
exclude = []
