
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "risc0-fuzzer"
version = "0.0.1"
description="Fuzzer for the Risc0 zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "circil",
  "zkvm-fuzzer-utils"
]

[project.scripts]
risc0-fuzzer = "risc0_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["risc0_fuzzer*"]
exclude = []
